# ez4d

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
ez4d/: bbox.py  camera.py  ckpt.py  device.py
ez4d/data/: __init__.py  dict.py  types.py
ez4d/data/ssvds/: __init__.py  v1.py
ez4d/debug/: __init__.py  stack_utils.py
ez4d/eval/: base_evaluator.py
ez4d/eval/metrics/: __init__.py  human_motion.py  mpxe_like.py  utils.py
ez4d/extra/bm_utils/smpl/: __init__.py  coord_trans.py
ez4d/geometry/: rotation.LICENSE  rotation.py  transform.py  volume.py
ez4d/info/: log.py  look.py  show.py
ez4d/info/monitor/: __init__.py  time.py
ez4d/kinematics/: __init__.py  abstract_skeletons.py
ez4d/media/: __init__.py  draw.py  edit.py  io.py  learning.py
ez4d/media/ffmpeg/: __init__.py
ez4d/sliding_batches/: __init__.py
ez4d/sliding_batches/adaptable/: v1.py
ez4d/vis/: __init__.py  colors.py  wis3d.py
ez4d/vis/blender_renderer/: __init__.py  blender_worker.py  renderer.py  utils.py
ez4d/vis/p3d_renderer/: __init__.py  renderer.py
ez4d/vis/py_renderer/: __init__.py  utils.py
tests/: test_blender_renderer.py  test_blender_smpl.py  test_blender_smpl_colors.py  test_blender_vs_p3d.py
